karnc/tests/fixtures/negative/168_float_bound_mismatch/input.karn
commons bad {
  type Ratio = Float where InRange(0, 1)
}
